--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@element-plus/icons-vue": "2.1.0",
     "@smallwei/avue": "^3.2.22",
     "@tinymce/tinymce-vue": "^5.1.0",
+    "@vuemap/vue-amap": "^2.1.8",
     "axios": "1.3.4",
     "big.js": "6.2.1",
     "browser-image-compression": "2.0.2",
