AdminFrontDev - fix construct 5 Auth

--- a/.env.development
+++ b/.env.development
@@ -8,4 +8,4 @@ VITE_APP_ENV = 'development'
 VITE_APP_BASE_API = 'http://127.0.0.1:8085'
 
 # 静态资源文件url
-VITE_APP_RESOURCES_URL = 'https://img.mall4j.com/'
+VITE_APP_RESOURCES_URL = 'https://myOSS.com/'
