AdminFrontDev - login - OK

--- a/.env.development
+++ b/.env.development
@@ -5,7 +5,7 @@
 VITE_APP_ENV = 'development'
 
 # api接口请求地址
-VITE_APP_BASE_API = 'http://127.0.0.1:8085'
+VITE_APP_BASE_API = 'http://localhost:9999'
 
 # 静态资源文件url
 VITE_APP_RESOURCES_URL = 'https://myOSS.com/'
