--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
-engine-strict = true
+engine-strict = false
 shamefully-hoist = true
 strict-peer-dependencies = false
 registry = https://registry.npmmirror.com
